log
Fri, May  2, 2025 11:59:51 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  7:19:39 PM: 
 treemap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:32: error: 'Pair {aka struct Pair}' has no member named 'left'
             aux_pair = aux_pair->left;
                                ^~
treemap.c:80:32: error: 'Pair {aka struct Pair}' has no member named 'right'
             aux_pair = aux_pair->right;
                                ^~
252d50e
Sat, May  3, 2025  7:27:33 PM: 
 treemap.c | 20 ++++++++++++--------
 1 file changed, 12 insertions(+), 8 deletions(-)
 tests:  11|6
total_score: 15/70
0b8f0d8
Sat, May  3, 2025  8:26:32 PM: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:65:17: error: 'aux' undeclared (first use in this function)
             if (aux->left == NULL){
                 ^~~
treemap.c:65:17: note: each undeclared identifier is reported only once for each function it appears in
8548885
Sat, May  3, 2025  8:29:15 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
03af2ec
Sat, May  3, 2025  8:30:54 PM: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
b4b70c3
Sat, May  3, 2025  8:32:42 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
0ea5647
Sat, May  3, 2025  8:59:09 PM: 
 treemap.c | 14 ++++----------
 1 file changed, 4 insertions(+), 10 deletions(-)
 tests:  15|4
total_score: 25/70
4d2f669
Sat, May  3, 2025  9:01:42 PM: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
4e133c9
Sat, May  3, 2025  9:05:04 PM: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  17|3
total_score: 30/70
221744d
Sat, May  3, 2025 11:59:56 PM: 
 treemap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
85d5bfe
Sun, May  4, 2025 12:17:42 AM: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:118:9: error: 'child' undeclared (first use in this function)
         child->parent = node->parent;
         ^~~~~
treemap.c:118:9: note: each undeclared identifier is reported only once for each function it appears in
d56679e
Sun, May  4, 2025 12:17:58 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
6e369c1
Sun, May  4, 2025 12:23:58 AM: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:125:23: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
     int success_key = success->pair->key;
                       ^~~~~~~
treemap.c:130:21: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     node->pair->key = success_key;
                     ^
cc1.exe: all warnings being treated as errors
80fbe89
Sun, May  4, 2025 12:27:54 AM: 
 treemap.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  20|2
total_score: 45/70
ab7c9a6
Sun, May  4, 2025 12:56:50 AM: 
 treemap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:173:9: error: 'node' undeclared (first use in this function)
     if (node->right != NULL){
         ^~~~
treemap.c:173:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:170:15: error: unused variable 'aux_node' [-Werror=unused-variable]
     TreeNode *aux_node = tree->current;
               ^~~~~~~~
cc1.exe: all warnings being treated as errors
1a3da0a
Sun, May  4, 2025 12:57:30 AM: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  22|2
total_score: 50/70
cebccb7
Sun, May  4, 2025  1:05:30 AM: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  0|0
0c4f3d1
Sun, May  4, 2025  1:06:30 AM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  25|1
total_score: 60/70
ebef208
Sun, May  4, 2025  1:19:48 AM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:167:35: error: 'current' undeclared (first use in this function)
         if (tree->lower_than(key, current->pair->key)){
                                   ^~~~~~~
treemap.c:167:35: note: each undeclared identifier is reported only once for each function it appears in
7d9514c
Sun, May  4, 2025  1:20:10 AM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
d530792
